feat(jvm): Add JVM notes.
- Add some JVM parameters explain and usage.